# klee

./: .gitignore  .travis.yml  CMakeLists.txt  Executor.cpp  Makefile  Makefile.common  Makefile.rules  README.md  UF_Arrays.h  conflicts_resolved.txt  install_chopped.sh  smallDump
.travis/: install-llvm-and-runtime-compiler.sh  klee.sh
AdamsFiles/: instructions.bc  instructions.c  instructions.ll
include/cliver/: AddressSpaceGraph.h  CVAssignment.h  CVExecutionState.h  CVExecutor.h  CVSearcher.h  CVStream.h  ClientVerifier.h  CliverStats.h  Cluster.h  ConstraintPruner.h  EditDistance.h  EditDistanceSequence.h  EditDistanceTree.h  EditDistanceTreeTest.h  ExecutionObserver.h  ExecutionStateProperty.h  ExecutionTrace.h  ExecutionTraceManager.h  ExecutionTraceTree.h  ExecutionTree.h  HMMPathPredictor.h  JaccardTree.h  KExtensionTree.h  LazyConstraint.h  LazyConstraintConfig.h  LevenshteinRadixTree.h  LockFreeVerifySearcher.h  NetworkManager.h  Path.h  PathManager.h  PathSelector.h  PathTree.h  RadixTree.h  SearcherStage.h  Socket.h  SocketEventMeasurement.h  SocketLog.h  StateMerger.h  StateRebuilder.h  Statistics.h  (+8 more)
include/klee/: CVAssignment.h  Cloud9Init.h  CommandLine.h  Common.h  Constants.h  Constraints.h  ExecutionState.h  Executor.h  Expr.h  IndependentElementSet.h  Interpreter.h  NuklearSocket.h  Solver.h  SolverImpl.h  SpecialFunctionHandler.h  Statistic.h  StatisticDataType.h  Statistics.h  TASEControl.h  TimerStatIncrementer.h  klee.h  tase.h  tase_constants.h  tase_interp.h
include/tase/: TASEControl.h  tase.h  tase_constants.h  tase_interp.h
lib/: CMakeLists.txt  Makefile
lib/Basic/: CMakeLists.txt  CmdLineOptions.cpp  ConstructSolverChain.cpp  KTest.cpp  Statistics.cpp
lib/Cliver/: AddressSpaceGraph.cpp  AddressSpaceGraph.h  BranchSelector.cpp  BranchSelector.h  CMakeLists.txt  CVAssignment.cpp  CVCommon.h  CVExecutionState.cpp  CVExecutionState.h  CVExecutor.cpp  CVExecutor.h  CVMemoryManager.cpp  CVMemoryManager.h  CVSearcher.cpp  CVSearcher.h  CVStream.cpp  CVStream.h  CanonicalSolver.cpp  ClientVerifier.cpp  ClientVerifier.h  CliverFunctionHandler.cpp  CliverFunctionHandler.h  CliverManager.h  CliverSearcher.h  Configuration.cpp  ConstraintPruner.cpp  ConstraintPruner.h  EditDistance.h  ExecutionObserver.cpp  ExecutionObserver.h  ExecutionStateInfo.h  ExecutionStateMerger.h  ExecutionStatePriorityQueue.h  ExecutionStateProperty.cpp  ExecutionStateProperty.h  ExecutionStatePruner.h  ExecutionStateScorer.h  ExecutionStateSerializer.h  ExecutionTrace.cpp  ExecutionTraceManager.cpp  (+37 more)
lib/Cliver/Serialization/: Makefile  Training.cpp  TrainingFilter.cpp
lib/Core/: #Memory.cpp#  .ProfileTree.cpp.swp  .ProfileTree.h.swp  AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  CallPathManager.cpp  CallPathManager.h  Cloud9Init.cpp  Common.cpp  Common.h  Context.cpp  CoreStats.cpp  CoreStats.h  Empirical_Mem_Mod.cpp  Empirical_Mem_Mod.h  ExecutionState.cpp  Executor.cpp  Executor.cpp_backup  Executor.h  Executor1.cpp  ExecutorTimers.cpp  ExecutorUtil.cpp  ExternalDispatcher.cpp  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  NuklearFunctionHandler.cpp  NuklearFunctionHandler.h  NuklearHash.h  NuklearManager.cpp  NuklearManager.h  NuklearSearcher.cpp  NuklearSearcher.h  PTree.cpp  PTree.h  ParallelExecutor.cpp  ParallelSearcher.cpp  ParallelSearcher.h  (+18 more)
lib/Expr/: ArrayCache.cpp  Constraints.cpp  Expr.cpp  ExprPPrinter.cpp  Parser.cpp  Updates.cpp
lib/Module/: CMakeLists.txt  Checks.cpp  DeterministicArchiveLinker.cpp  InstructionInfoTable.cpp  IntrinsicCleaner.cpp  KModule.cpp  Makefile  ModuleUtil.cpp  Optimize.cpp  Passes.h
lib/Solver/: CMakeLists.txt  CanonicalSolver.cpp  CexCachingSolver.cpp  IndependentSolver.cpp  MetaSMTBuilder.h  QueryLoggingSolver.cpp  STPBuilder.cpp  STPSolver.cpp  Solver.cpp  SolverImpl.cpp  TrivialEqualitySolver.cpp
lib/Support/: ErrorHandling.cpp  Mutex.cpp  Timer.cpp
lib/Tase/: CMakeLists.txt  CVAssignment.cpp  TASEControl.cpp  TASECryptoModels.cpp  TASESysModels.cpp
runtime/: CMakeLists.txt  Makefile  Makefile.cmake.bitcode
runtime/POSIX/: fd.c  signal.c  socket.c  x11.c
runtime/Runtest/: Makefile
runtime/cloud9-POSIX/: Makefile  Makefile.cmake.bitcode  abstraction_models.c  abstraction_models.h  config.h  fd.c  fd.h  files.c  klee_init_env.c  memcpy.c  memset.c  misc.c  models.h  monitor_dh.c  monitor_ktest.c  monitor_pam.c  multiprocess.h  openssl.c  openssl.h  openssl_evp.c  openssl_gcm.c  openssl_ktest.c  openssl_sha.c  processes.c  sockets.c  sockets_cliver.c  stubs.c
test/: Makefile  lit.cfg  lit.site.cfg.in
test/Cliver/: .gitignore  ArrayNew.cpp  ClientServer.c  ClientServerMultiPass.c  ClientServerParallel.c  KTestSocket.inc  LazyConstraint.c  PointerTracking.c  Switch.c  TestClientServer.c  TestClientServerMultiPass.c  TestClientServerParallel.c  TestLazyConstraint.c  TestLazyConstraint.inc.c  TestLazyConstraintIVC-Concrete.c  TestLazyConstraintIVC-LazyP.c  TestLazyConstraintIVC-LazyPboth.c  TestLazyConstraintIVC-LazyPinv.c  TestLazyConstraintIVC-Prohib.c  TestLazyConstraintIVC.c  TestLazyConstraintNet-Concrete.c  TestLazyConstraintNet-LazyP.c  TestLazyConstraintNet-LazyPboth.c  TestLazyConstraintNet-LazyPinv.c  TestLazyConstraintNet-Prohib.c  TestLazyConstraintNet.c  Tetrinet.run  Vararg.c  Xpilot.run  XpilotTraining.run  XpilotTrainingJaccard.run  XpilotTrainingSelf.run  XpilotTrainingSelfJaccard.run  game_0_0_1_1_10_p1_localhost.ktest  game_1_0_1_1_10_p1_localhost.ktest  lit.local.cfg  run.stats  tetrinet.bc  tetrinet_llvm34.bc  xpilot.bc  (+3 more)
test/Concrete/: ConstantExpr.ll
tools/: CMakeLists.txt  Makefile
tools/kleaver/: CMakeLists.txt  Makefile  main.cpp
unittests/: Makefile
(+96 files in other folders)
