#===------------------------------------------------------------------------===#
#
#                     The KLEE Symbolic Virtual Machine
#
# This file is distributed under the University of Illinois Open Source
# License. See LICENSE.TXT for details.
#
#===------------------------------------------------------------------------===#
klee_add_component(kleeTase
  CVAssignment.cpp
  TASEControl.cpp
)

target_link_libraries(kleeTase PRIVATE ${ZLIB_LIBRARIES})

klee_get_llvm_libs(LLVM_LIBS ${LLVM_COMPONENTS})
target_link_libraries(kleeTase PUBLIC ${LLVM_LIBS})
